# SMPC

./: Dockerfile  caddy.yml  create_db.py  docker-compose.yml  pyproject.toml  run_dev.py
app/: __init__.py  models.py  routes.py
app/blueprints/: auth_logic.py  service_logic.py  web_logic.py
app/static/js/: app.min.js
app/static/js/demo/: dashboard.demo.js
app/templates/: add_service.html  base.html  dashboard.html  dashboard_base.html  error.html  landing.html  manage_apps.html
instance/: app.db
